@@ -88,8 +88,11 @@ bail_out_on_fail = 1
 mode = auto
 
 ; ==============================================================================
+; Run "xt/" tests, but don't include them in the release.
+[RunExtraTests]
+
+; ==============================================================================
 ; Munge existing files
-[ExtraTests]
 [NextRelease]
 [RewriteVersion]
 
@@ -181,7 +184,7 @@ you to remove specific plugins like this:
 ```
 [@Author::GTERMARS]
 -remove = GitHub::Meta
--remove = ExtraTests
+-remove = RunExtraTests
 ```
 
 # AUTHOR
