@@ -19,6 +19,7 @@ Dist::Zilla::Plugin::Prereqs::AuthorDeps = 0.006
 Dist::Zilla::Plugin::Prereqs::FromCPANfile = 0.08
 Dist::Zilla::Plugin::PromptIfStale = 0.057
 Dist::Zilla::Plugin::ReadmeAnyFromPod = 0.163250
+Dist::Zilla::Plugin::RunExtraTests = 0.028
 Dist::Zilla::Plugin::StaticInstall = 0.012
 Dist::Zilla::Plugin::Test::CleanNamespaces = 0
 Dist::Zilla::Plugin::Test::Compile = 0
