@@ -2,6 +2,7 @@ Revision history for Perl extension Dist::Zilla::PluginBundle::Author::GTERMARS
 
 {{$NEXT}}
     - Exclude `cpanfile` from distribution tarballs
+    - Leave `xt/` tests in `xt/`, don't move them to `t/`
 
 0.01      2020-12-30 20:36:56-08:00 America/Vancouver
     - Initial release
